AnalizadorSintactico/parser.output
Terminales no usados en la gramática

   BREAK
   BOOLEANO
   BracketOP
   BracketCL
   IGUAL


Estado 18 conflictos: 14 desplazamiento/reducción
Estado 34 conflictos: 7 desplazamiento/reducción
Estado 36 conflictos: 14 desplazamiento/reducción
Estado 46 conflictos: 14 desplazamiento/reducción
Estado 67 conflictos: 7 desplazamiento/reducción
Estado 143 conflictos: 14 desplazamiento/reducción
Estado 151 conflictos: 7 desplazamiento/reducción
Estado 158 conflictos: 6 desplazamiento/reducción
Estado 167 conflictos: 6 desplazamiento/reducción
Estado 170 conflictos: 6 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: MAIN ParetOP ParetCL KEYOP comandos KEYCL metodo
    2        | MAIN ParetOP declaration ParetCL KEYOP comandos KEYCL metodo
    3        | MAIN ParetOP ParetCL KEYOP comandos metodo comandos KEYCL metodo
    4        | MAIN ParetOP declaration ParetCL KEYOP comandos metodo comandos KEYCL metodo
    5        | error

    6 metodo: %empty
    7       | lista_tipo ID ParetOP ParetCL KEYOP comandos KEYCL metodo
    8       | lista_tipo ID ParetOP ParetCL KEYOP comandos metodo comandos KEYCL metodo
    9       | lista_tipo ID ParetOP declaration ParetCL KEYOP comandos KEYCL metodo
   10       | error

   11 lista_tipo: INT_TYPE
   12           | FLOAT_TYPE
   13           | STRING_TYPE
   14           | LETRA_TYPE
   15           | BOOL_TYPE

   16 comandos: command_list

   17 command_list: KEYOP command_list KEYCL
   18             | command command_list
   19             | %empty

   20 command: comando_simple FinCommand
   21        | bucle
   22        | error

   23 bucle: controlF
   24      | controlFor
   25      | controlWhile
   26      | controlDo

   27 comando_simple: PRINT STRING
   28               | RETURN
   29               | attrib
   30               | declaration

   31 controlF: IF ParetOP l_expr ParetCL KEYOP comandos KEYCL controlElse

   32 controlElse: %empty
   33            | ELSE KEYOP comandos KEYCL

   34 controlFor: FOR ParetOP ffirst FinCommand l_expr FinCommand fthird ParetCL KEYOP comandos KEYCL

   35 ffirst: %empty
   36       | attrib_list

   37 fthird: %empty
   38       | comando_simple COMA fthird
   39       | comando_simple

   40 controlWhile: WHILE ParetOP l_expr ParetCL KEYOP comandos KEYCL

   41 controlDo: DO KEYOP comandos KEYCL WHILE ParetOP l_expr ParetCL FinCommand

   42 declaration: INT_TYPE ASIGNACION ID
   43            | FLOAT_TYPE ASIGNACION ID
   44            | STRING_TYPE ASIGNACION ID
   45            | LETRA_TYPE ASIGNACION ID
   46            | BOOL_TYPE ASIGNACION ID

   47 attrib_list: attrib ',' attrib_list
   48            | attrib

   49 attrib: i_attrib
   50       | ID MATH_INC
   51       | ID MATH_DEC
   52       | ID '=' ID
   53       | error

   54 i_attrib: ID '=' g_expr
   55         | ID '=' t_expr
   56         | ID '=' c_expr

   57 t_expr: STRING

   58 c_expr: CHAR

   59 l_expr: l_expr EQL l_factor
   60       | l_expr AND l_factor
   61       | l_expr OR l_factor
   62       | l_expr MAYOR_QUE l_factor
   63       | l_expr MENOR_QUE l_factor
   64       | NOT l_expr
   65       | l_factor

   66 l_factor: ParetOP l_expr ParetOP
   67         | INTEGER
   68         | FLOTANTE
   69         | ID

   70 g_expr: g_expr '+' g_term
   71       | g_expr '-' g_term
   72       | g_term

   73 g_term: g_term '*' g_factor
   74       | g_term '/' g_factor
   75       | g_factor

   76 g_factor: ParetOP g_expr ParetOP
   77         | INTEGER
   78         | FLOTANTE


Terminales con las reglas donde aparecen

$end (0) 0
'*' (42) 73
'+' (43) 70
',' (44) 47
'-' (45) 71
'/' (47) 74
'=' (61) 52 54 55 56
error (256) 5 10 22 53
MAIN (258) 1 2 3 4
IF (259) 31
ELSE (260) 33
DO (261) 41
WHILE (262) 40 41
FOR (263) 34
BREAK (264)
PRINT (265) 27
RETURN (266) 28
INT_TYPE (267) 11 42
FLOAT_TYPE (268) 12 43
LETRA_TYPE (269) 14 45
STRING_TYPE (270) 13 44
BOOL_TYPE (271) 15 46
CHAR (272) 58
STRING (273) 27 57
INTEGER (274) 67 77
FLOTANTE (275) 68 78
BOOLEANO (276)
ID (277) 7 8 9 42 43 44 45 46 50 51 52 54 55 56 69
MATH_INC (278) 50
MATH_DEC (279) 51
EQL (280) 59
MENOR_QUE (281) 63
MAYOR_QUE (282) 62
AND (283) 60
OR (284) 61
NOT (285) 64
KEYOP (286) 1 2 3 4 7 8 9 17 31 33 34 40 41
KEYCL (287) 1 2 3 4 7 8 9 17 31 33 34 40 41
ParetOP (288) 1 2 3 4 7 8 9 31 34 40 41 66 76
ParetCL (289) 1 2 3 4 7 8 9 31 34 40 41
BracketOP (290)
BracketCL (291)
IGUAL (292)
ASIGNACION (293) 42 43 44 45 46
COMA (294) 38
FinCommand (295) 20 34 41


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
program (48)
    en la izquierda: 1 2 3 4 5, en la derecha: 0
metodo (49)
    en la izquierda: 6 7 8 9 10, en la derecha: 1 2 3 4 7 8 9
lista_tipo (50)
    en la izquierda: 11 12 13 14 15, en la derecha: 7 8 9
comandos (51)
    en la izquierda: 16, en la derecha: 1 2 3 4 7 8 9 31 33 34 40 41
command_list (52)
    en la izquierda: 17 18 19, en la derecha: 16 17 18
command (53)
    en la izquierda: 20 21 22, en la derecha: 18
bucle (54)
    en la izquierda: 23 24 25 26, en la derecha: 21
comando_simple (55)
    en la izquierda: 27 28 29 30, en la derecha: 20 38 39
controlF (56)
    en la izquierda: 31, en la derecha: 23
controlElse (57)
    en la izquierda: 32 33, en la derecha: 31
controlFor (58)
    en la izquierda: 34, en la derecha: 24
ffirst (59)
    en la izquierda: 35 36, en la derecha: 34
fthird (60)
    en la izquierda: 37 38 39, en la derecha: 34 38
controlWhile (61)
    en la izquierda: 40, en la derecha: 25
controlDo (62)
    en la izquierda: 41, en la derecha: 26
declaration (63)
    en la izquierda: 42 43 44 45 46, en la derecha: 2 4 9 30
attrib_list (64)
    en la izquierda: 47 48, en la derecha: 36 47
attrib (65)
    en la izquierda: 49 50 51 52 53, en la derecha: 29 47 48
i_attrib (66)
    en la izquierda: 54 55 56, en la derecha: 49
t_expr (67)
    en la izquierda: 57, en la derecha: 55
c_expr (68)
    en la izquierda: 58, en la derecha: 56
l_expr (69)
    en la izquierda: 59 60 61 62 63 64 65, en la derecha: 31 34 40
    41 59 60 61 62 63 64 66
l_factor (70)
    en la izquierda: 66 67 68 69, en la derecha: 59 60 61 62 63 65
g_expr (71)
    en la izquierda: 70 71 72, en la derecha: 54 70 71 76
g_term (72)
    en la izquierda: 73 74 75, en la derecha: 70 71 72 73 74
g_factor (73)
    en la izquierda: 76 77 78, en la derecha: 73 74 75


Estado 0

    0 $accept: . program $end

    error  desplazar e ir al estado 1
    MAIN   desplazar e ir al estado 2

    program  ir al estado 3


Estado 1

    5 program: error .

    $default  reduce usando la regla 5 (program)


Estado 2

    1 program: MAIN . ParetOP ParetCL KEYOP comandos KEYCL metodo
    2        | MAIN . ParetOP declaration ParetCL KEYOP comandos KEYCL metodo
    3        | MAIN . ParetOP ParetCL KEYOP comandos metodo comandos KEYCL metodo
    4        | MAIN . ParetOP declaration ParetCL KEYOP comandos metodo comandos KEYCL metodo

    ParetOP  desplazar e ir al estado 4


Estado 3

    0 $accept: program . $end

    $end  desplazar e ir al estado 5


Estado 4

    1 program: MAIN ParetOP . ParetCL KEYOP comandos KEYCL metodo
    2        | MAIN ParetOP . declaration ParetCL KEYOP comandos KEYCL metodo
    3        | MAIN ParetOP . ParetCL KEYOP comandos metodo comandos KEYCL metodo
    4        | MAIN ParetOP . declaration ParetCL KEYOP comandos metodo comandos KEYCL metodo

    INT_TYPE     desplazar e ir al estado 6
    FLOAT_TYPE   desplazar e ir al estado 7
    LETRA_TYPE   desplazar e ir al estado 8
    STRING_TYPE  desplazar e ir al estado 9
    BOOL_TYPE    desplazar e ir al estado 10
    ParetCL      desplazar e ir al estado 11

    declaration  ir al estado 12


Estado 5

    0 $accept: program $end .

    $default  aceptar


Estado 6

   42 declaration: INT_TYPE . ASIGNACION ID

    ASIGNACION  desplazar e ir al estado 13


Estado 7

   43 declaration: FLOAT_TYPE . ASIGNACION ID

    ASIGNACION  desplazar e ir al estado 14


Estado 8

   45 declaration: LETRA_TYPE . ASIGNACION ID

    ASIGNACION  desplazar e ir al estado 15


Estado 9

   44 declaration: STRING_TYPE . ASIGNACION ID

    ASIGNACION  desplazar e ir al estado 16


Estado 10

   46 declaration: BOOL_TYPE . ASIGNACION ID

    ASIGNACION  desplazar e ir al estado 17


Estado 11

    1 program: MAIN ParetOP ParetCL . KEYOP comandos KEYCL metodo
    3        | MAIN ParetOP ParetCL . KEYOP comandos metodo comandos KEYCL metodo

    KEYOP  desplazar e ir al estado 18


Estado 12

    2 program: MAIN ParetOP declaration . ParetCL KEYOP comandos KEYCL metodo
    4        | MAIN ParetOP declaration . ParetCL KEYOP comandos metodo comandos KEYCL metodo

    ParetCL  desplazar e ir al estado 19


Estado 13

   42 declaration: INT_TYPE ASIGNACION . ID

    ID  desplazar e ir al estado 20


Estado 14

   43 declaration: FLOAT_TYPE ASIGNACION . ID

    ID  desplazar e ir al estado 21


Estado 15

   45 declaration: LETRA_TYPE ASIGNACION . ID

    ID  desplazar e ir al estado 22


Estado 16

   44 declaration: STRING_TYPE ASIGNACION . ID

    ID  desplazar e ir al estado 23


Estado 17

   46 declaration: BOOL_TYPE ASIGNACION . ID

    ID  desplazar e ir al estado 24


Estado 18

    1 program: MAIN ParetOP ParetCL KEYOP . comandos KEYCL metodo
    3        | MAIN ParetOP ParetCL KEYOP . comandos metodo comandos KEYCL metodo

    error        desplazar e ir al estado 25
    IF           desplazar e ir al estado 26
    DO           desplazar e ir al estado 27
    WHILE        desplazar e ir al estado 28
    FOR          desplazar e ir al estado 29
    PRINT        desplazar e ir al estado 30
    RETURN       desplazar e ir al estado 31
    INT_TYPE     desplazar e ir al estado 6
    FLOAT_TYPE   desplazar e ir al estado 7
    LETRA_TYPE   desplazar e ir al estado 8
    STRING_TYPE  desplazar e ir al estado 9
    BOOL_TYPE    desplazar e ir al estado 10
    ID           desplazar e ir al estado 32
    KEYOP        desplazar e ir al estado 33

    error        [reduce usando la regla 19 (command_list)]
    IF           [reduce usando la regla 19 (command_list)]
    DO           [reduce usando la regla 19 (command_list)]
    WHILE        [reduce usando la regla 19 (command_list)]
    FOR          [reduce usando la regla 19 (command_list)]
    PRINT        [reduce usando la regla 19 (command_list)]
    RETURN       [reduce usando la regla 19 (command_list)]
    INT_TYPE     [reduce usando la regla 19 (command_list)]
    FLOAT_TYPE   [reduce usando la regla 19 (command_list)]
    LETRA_TYPE   [reduce usando la regla 19 (command_list)]
    STRING_TYPE  [reduce usando la regla 19 (command_list)]
    BOOL_TYPE    [reduce usando la regla 19 (command_list)]
    ID           [reduce usando la regla 19 (command_list)]
    KEYOP        [reduce usando la regla 19 (command_list)]
    KEYCL        reduce usando la regla 19 (command_list)

    comandos        ir al estado 34
    command_list    ir al estado 35
    command         ir al estado 36
    bucle           ir al estado 37
    comando_simple  ir al estado 38
    controlF        ir al estado 39
    controlFor      ir al estado 40
    controlWhile    ir al estado 41
    controlDo       ir al estado 42
    declaration     ir al estado 43
    attrib          ir al estado 44
    i_attrib        ir al estado 45


Estado 19

    2 program: MAIN ParetOP declaration ParetCL . KEYOP comandos KEYCL metodo
    4        | MAIN ParetOP declaration ParetCL . KEYOP comandos metodo comandos KEYCL metodo

    KEYOP  desplazar e ir al estado 46


Estado 20

   42 declaration: INT_TYPE ASIGNACION ID .

    $default  reduce usando la regla 42 (declaration)


Estado 21

   43 declaration: FLOAT_TYPE ASIGNACION ID .

    $default  reduce usando la regla 43 (declaration)


Estado 22

   45 declaration: LETRA_TYPE ASIGNACION ID .

    $default  reduce usando la regla 45 (declaration)


Estado 23

   44 declaration: STRING_TYPE ASIGNACION ID .

    $default  reduce usando la regla 44 (declaration)


Estado 24

   46 declaration: BOOL_TYPE ASIGNACION ID .

    $default  reduce usando la regla 46 (declaration)


Estado 25

   22 command: error .
   53 attrib: error .

    FinCommand  reduce usando la regla 53 (attrib)
    $default    reduce usando la regla 22 (command)


Estado 26

   31 controlF: IF . ParetOP l_expr ParetCL KEYOP comandos KEYCL controlElse

    ParetOP  desplazar e ir al estado 47


Estado 27

   41 controlDo: DO . KEYOP comandos KEYCL WHILE ParetOP l_expr ParetCL FinCommand

    KEYOP  desplazar e ir al estado 48


Estado 28

   40 controlWhile: WHILE . ParetOP l_expr ParetCL KEYOP comandos KEYCL

    ParetOP  desplazar e ir al estado 49


Estado 29

   34 controlFor: FOR . ParetOP ffirst FinCommand l_expr FinCommand fthird ParetCL KEYOP comandos KEYCL

    ParetOP  desplazar e ir al estado 50


Estado 30

   27 comando_simple: PRINT . STRING

    STRING  desplazar e ir al estado 51


Estado 31

   28 comando_simple: RETURN .

    $default  reduce usando la regla 28 (comando_simple)


Estado 32

   50 attrib: ID . MATH_INC
   51       | ID . MATH_DEC
   52       | ID . '=' ID
   54 i_attrib: ID . '=' g_expr
   55         | ID . '=' t_expr
   56         | ID . '=' c_expr

    MATH_INC  desplazar e ir al estado 52
    MATH_DEC  desplazar e ir al estado 53
    '='       desplazar e ir al estado 54


Estado 33

   17 command_list: KEYOP . command_list KEYCL

    error        desplazar e ir al estado 25
    IF           desplazar e ir al estado 26
    DO           desplazar e ir al estado 27
    WHILE        desplazar e ir al estado 28
    FOR          desplazar e ir al estado 29
    PRINT        desplazar e ir al estado 30
    RETURN       desplazar e ir al estado 31
    INT_TYPE     desplazar e ir al estado 6
    FLOAT_TYPE   desplazar e ir al estado 7
    LETRA_TYPE   desplazar e ir al estado 8
    STRING_TYPE  desplazar e ir al estado 9
    BOOL_TYPE    desplazar e ir al estado 10
    ID           desplazar e ir al estado 32
    KEYOP        desplazar e ir al estado 33

    KEYCL  reduce usando la regla 19 (command_list)

    command_list    ir al estado 55
    command         ir al estado 36
    bucle           ir al estado 37
    comando_simple  ir al estado 38
    controlF        ir al estado 39
    controlFor      ir al estado 40
    controlWhile    ir al estado 41
    controlDo       ir al estado 42
    declaration     ir al estado 43
    attrib          ir al estado 44
    i_attrib        ir al estado 45


Estado 34

    1 program: MAIN ParetOP ParetCL KEYOP comandos . KEYCL metodo
    3        | MAIN ParetOP ParetCL KEYOP comandos . metodo comandos KEYCL metodo

    error        desplazar e ir al estado 56
    INT_TYPE     desplazar e ir al estado 57
    FLOAT_TYPE   desplazar e ir al estado 58
    LETRA_TYPE   desplazar e ir al estado 59
    STRING_TYPE  desplazar e ir al estado 60
    BOOL_TYPE    desplazar e ir al estado 61
    KEYCL        desplazar e ir al estado 62

    error        [reduce usando la regla 6 (metodo)]
    IF           reduce usando la regla 6 (metodo)
    DO           reduce usando la regla 6 (metodo)
    WHILE        reduce usando la regla 6 (metodo)
    FOR          reduce usando la regla 6 (metodo)
    PRINT        reduce usando la regla 6 (metodo)
    RETURN       reduce usando la regla 6 (metodo)
    INT_TYPE     [reduce usando la regla 6 (metodo)]
    FLOAT_TYPE   [reduce usando la regla 6 (metodo)]
    LETRA_TYPE   [reduce usando la regla 6 (metodo)]
    STRING_TYPE  [reduce usando la regla 6 (metodo)]
    BOOL_TYPE    [reduce usando la regla 6 (metodo)]
    ID           reduce usando la regla 6 (metodo)
    KEYOP        reduce usando la regla 6 (metodo)
    KEYCL        [reduce usando la regla 6 (metodo)]

    metodo      ir al estado 63
    lista_tipo  ir al estado 64


Estado 35

   16 comandos: command_list .

    $default  reduce usando la regla 16 (comandos)


Estado 36

   18 command_list: command . command_list
